deployments/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ctrl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /messages
spec:
  ingressClassName: nginx
  rules:
    - host: local.example
      http:
        paths:
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: message-receiver-svc
                port:
                  number: 8080
